welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:4: error: not found: value diag
  if (diag == (getMondeHauteur()*getMondeLargeur()) -1) {return true}
      ^